--- a/service-front/app/src/Actor/templates/actor/partials/check-code-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/check-code-details.html.twig
@@ -36,7 +36,7 @@
 
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">{% trans %}Created by{% endtrans %}</dt>
-                    {% if code.CreatedBy is not empty %}
+                    {% if code.CreatedBy is defined %}
                         <dd class="govuk-summary-list__value">{{ code.CreatedBy }}</dd>
                     {% else %}
                         {# this should only be the case where the user who created the code deleted their lpa, so we can't figure out who the code was created by #}
