--- a/service-front/app/src/Viewer/templates/viewer/partials/upcoming-service-downtime.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/partials/upcoming-service-downtime.html.twig
@@ -6,7 +6,7 @@
     </div>
     <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-            {% trans %}This service will be unavailable between 3pm on Friday 8 April and 6pm on Sunday 10 April 2022.{% endtrans %}
+            {% trans %}This service will be unavailable between 9pm on Saturday 31st March 2023 and 9:30 am 1st April 2023.{% endtrans %}
         </p>
     </div>
 </div>
