--- a/service-admin/web/templates/systemmessage.page.gohtml
+++ b/service-admin/web/templates/systemmessage.page.gohtml
@@ -6,7 +6,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
-                <div class="govuk-form-group {{ if .Errors.Query }}govuk-form-group--error{{ end }}">
+                <div class="govuk-form-group">
                     <h1 class="govuk-label-wrapper">
                         <label class="govuk-heading-l govuk-!-margin-bottom-2">
                             System message
@@ -15,26 +15,37 @@
                     <p class="govuk-body">System messages will be seen by all visitors to the LPA service. They should
                         be used to inform users of scheduled periods of maintenance or changes to the LPA service.</p>
 
-                    {{ if .Errors.Query }}
-                        <span class="govuk-error-message">
-                            <span class="govuk-visually-hidden">Error:</span> {{ .Errors.Query }}
-                        </span>
+                    {{ if .SuccessMessage }}
+                    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+                        <div class="govuk-notification-banner__header">
+                            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                                {{ .SuccessMessage }}
+                            </h2>
+                        </div>
+                        </div>
                     {{ end }}
+
+                    {{ if .ErrorMessage }}
+                        <div class="govuk-error-message">
+                            <span class="govuk-visually-hidden">Error:</span> {{ .ErrorMessage }}
+                        </div>
+                    {{ end }}
+
                     <div class="govuk-form-group">
                         <h2 class="govuk-heading-l">Use an LPA</h2>
                         <p class="govuk-body">Message in English</p>
-                        <textarea class="govuk-textarea" name="use-eng" id="use-eng">{{ index . "system-message-use-en"}}</textarea>
+                        <textarea class="govuk-textarea" name="use-eng" id="use-eng">{{ index .Messages "system-message-use-en"}}</textarea>
                         <p class="govuk-body">Message in Welsh</p>
-                        <textarea class="govuk-textarea" name="use-cy" id="use-cy">{{ index . "system-message-use-cy"}}</textarea>
+                        <textarea class="govuk-textarea" name="use-cy" id="use-cy">{{ index .Messages "system-message-use-cy"}}</textarea>
                     </div>
 
 
                     <div class="govuk-form-group">
                         <h2 class="govuk-heading-l">View an LPA</h2>
                         <p class="govuk-body">Message in English</p>
-                        <textarea class="govuk-textarea" name="view-eng" id="view-eng">{{ index . "system-message-view-en"}}</textarea>
+                        <textarea class="govuk-textarea" name="view-eng" id="view-eng">{{ index .Messages "system-message-view-en"}}</textarea>
                         <p class="govuk-body">Message in Welsh</p>
-                        <textarea class="govuk-textarea" name="view-cy" id="view-cy">{{ index . "system-message-view-cy"}}</textarea>
+                        <textarea class="govuk-textarea" name="view-cy" id="view-cy">{{ index .Messages "system-message-view-cy"}}</textarea>
                     </div>
 
                     <button class="govuk-button" data-module="govuk-button">
