--- a/service-admin/web/templates/systemmessage.page.gohtml
+++ b/service-admin/web/templates/systemmessage.page.gohtml
@@ -34,18 +34,18 @@
                     <div class="govuk-form-group">
                         <h2 class="govuk-heading-l">Use an LPA</h2>
                         <p class="govuk-body">Message in English</p>
-                        <textarea class="govuk-textarea" name="use-eng" id="use-eng">{{ index .Messages "system-message-use-en"}}</textarea>
+                        <textarea class="govuk-textarea" name="use-eng" id="use-eng">{{ index .Messages "/system-message/use/en"}}</textarea>
                         <p class="govuk-body">Message in Welsh</p>
-                        <textarea class="govuk-textarea" name="use-cy" id="use-cy">{{ index .Messages "system-message-use-cy"}}</textarea>
+                        <textarea class="govuk-textarea" name="use-cy" id="use-cy">{{ index .Messages "/system-message/use/cy"}}</textarea>
                     </div>
 
 
                     <div class="govuk-form-group">
                         <h2 class="govuk-heading-l">View an LPA</h2>
                         <p class="govuk-body">Message in English</p>
-                        <textarea class="govuk-textarea" name="view-eng" id="view-eng">{{ index .Messages "system-message-view-en"}}</textarea>
+                        <textarea class="govuk-textarea" name="view-eng" id="view-eng">{{ index .Messages "/system-message/view/en"}}</textarea>
                         <p class="govuk-body">Message in Welsh</p>
-                        <textarea class="govuk-textarea" name="view-cy" id="view-cy">{{ index .Messages "system-message-view-cy"}}</textarea>
+                        <textarea class="govuk-textarea" name="view-cy" id="view-cy">{{ index .Messages "/system-message/view/cy"}}</textarea>
                     </div>
 
                     <button class="govuk-button" data-module="govuk-button">
